; ModuleID = '/home/carl/AnghaBench/zfs/module/lua/extr_lobject.c_readhexa.c'
source_filename = "/home/carl/AnghaBench/zfs/module/lua/extr_lobject.c_readhexa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32, i32*)* @readhexa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @readhexa(i8** %0, i32 %1, i32* %2) #0 {
  %4 = alloca i8**, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  store i8** %0, i8*** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32* %2, i32** %6, align 8
  br label %7

7:                                                ; preds = %28, %3
  %8 = load i8**, i8*** %4, align 8
  %9 = load i8*, i8** %8, align 8
  %10 = load i8, i8* %9, align 1
  %11 = call i32 @cast_uchar(i8 signext %10)
  %12 = call i64 @lisxdigit(i32 %11)
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %32

14:                                               ; preds = %7
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @cast_num(double 1.600000e+01)
  %17 = mul nsw i32 %15, %16
  %18 = load i8**, i8*** %4, align 8
  %19 = load i8*, i8** %18, align 8
  %20 = load i8, i8* %19, align 1
  %21 = call i32 @cast_uchar(i8 signext %20)
  %22 = call double @luaO_hexavalue(i32 %21)
  %23 = call i32 @cast_num(double %22)
  %24 = add nsw i32 %17, %23
  store i32 %24, i32* %5, align 4
  %25 = load i32*, i32** %6, align 8
  %26 = load i32, i32* %25, align 4
  %27 = add nsw i32 %26, 1
  store i32 %27, i32* %25, align 4
  br label %28

28:                                               ; preds = %14
  %29 = load i8**, i8*** %4, align 8
  %30 = load i8*, i8** %29, align 8
  %31 = getelementptr inbounds i8, i8* %30, i32 1
  store i8* %31, i8** %29, align 8
  br label %7

32:                                               ; preds = %7
  %33 = load i32, i32* %5, align 4
  ret i32 %33
}

declare dso_local i64 @lisxdigit(i32) #1

declare dso_local i32 @cast_uchar(i8 signext) #1

declare dso_local i32 @cast_num(double) #1

declare dso_local double @luaO_hexavalue(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
